* Fixed bot not able to restart

* Added logger (currently on alert command only)

* Added join and quit listener

* Added date formatter to index.js

* Simplified config file reader

* Removed debug message

* Fixed logger not creating file

* Added coloring to join-left logger

* Fixed alert logging

12/11/2019 (UTC+7)