@@ -1,2 +1,0 @@
-
-[2019/12/11 - 13:54:59] Alvian -> alerted args=[asdasd]
